--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "netlify-build": "npm run build:client"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
     "cors": "^2.8.5",
