commented out edge_functions

--- a/netlify.toml
+++ b/netlify.toml
@@ -63,5 +63,5 @@
   directory = "netlify/functions"
 
 # Edge functions
-[edge_functions]
-  directory = "netlify/edge-functions"
+# [edge_functions]
+#  directory = "netlify/edge-functions"
